feat: add post/category/comment/tag and their controller/model/db feat: separate validator feat: add category level structure feat: add seeder/factor for post/category feat: add post/category swagger
